--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+*{
+    padding: 0px;
+    margin: 0px;
+}
 /* primary font */
 body {
     font-family: 'Open Sans', sans-serif;
@@ -20,8 +24,10 @@ body {
 
 /* header section style */
 header {
-    background-image: url("../images/banner/banner2.png");
+    background-image: url("../images/banner/banner2.png")
+    /* ,linear-gradient(rgb(0, 12, 12),rgb(0, 0, 19))*/; 
     background-repeat: no-repeat;
+    background-size: cover;
     height: 809px;
     position: relative;
     padding: 200px 230px 0px 650px;
@@ -41,4 +47,5 @@ header {
 .header-btn {
     background-color: #F15B22;
     color: #FFF;
+    margin-top: 32px;
 }
