--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 
 /* primary Button */
 .primary-btn {
-    padding: 15px;
+    padding: 15px 30px;
     border-radius: 5px;
     background-color: #FFF;
     color: #F15B22;
@@ -122,7 +122,7 @@ ul {
 /* Awlays keep a positive mindset section style */
 .mindset {
     margin-top: 130px;
-    background-image: linear-gradient(rgba(255, 166, 0, 0.486),rgba(0, 0, 0, 0.007)), url("../images/watch.png");
+    background-image: linear-gradient(rgba(255, 166, 0, 0.486), rgba(0, 0, 0, 0.007)), url("../images/watch.png");
     background-repeat: no-repeat;
     background-size: cover;
     text-align: left;
@@ -138,3 +138,66 @@ ul {
 
 
 /* Footer section style */
+footer {
+    background-color: black;
+    padding: 130px 200px;
+    color: #FFF;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.footer-section-left {
+    width: 50%;
+}
+
+.footer-section-left-title {
+    color: #F8F8F8;
+    font-size: 45px;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+
+.footer-section-left-description {
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 0px;
+    margin-bottom: 24px;
+}
+
+.user-info {
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 0px;
+}
+
+.user-info li {
+    margin-bottom: 14px;
+}
+
+.social-link a {
+    margin-left: 10px;
+}
+
+.footer-section-right input[type="email"] {
+    display: block;
+    background-color: black;
+    padding: 15px 0px 15px 22px;
+    border-radius: 8px;
+    width: 100%;
+    border: 1px solid #FFF;
+    margin-top: 31px;
+    margin-bottom: 16px;
+}
+
+.footer-section-right-title {
+    font-size: 25px;
+    font-weight: 600;
+}
+
+/* .subscribe {
+    border-radius: 8px;
+    border: 1px solid #FFF;
+} */
