--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,7 @@ footer {
 .footer-section-right input[type="email"] {
     display: block;
     background-color: black;
+    color: #FFF;
     padding: 15px 0px 15px 22px;
     border-radius: 8px;
     width: 100%;
